--- a/css/estilos.css
+++ b/css/estilos.css
@@ -43,23 +43,20 @@ h1, h2, h3, h4, h5, h6{
     vertical-align: middle;
 }
 
-/*
 .cuento{
-    margin: auto;
     background-color: rgba(255, 255, 255, 0.63);
-    position: absolute;
     display: table;
-    text-align: center;
-    justify-content: center;
+    padding: 20px;
 }
 
 .cuento p{
     display: table-cell;
-    margin: 0;
     padding: 0 1rem;
     vertical-align: middle;
+    text-align: center;
+    justify-content: center;
 }
-*/
+
 
 /* **************************************
 *************** TITULO *****************
@@ -75,6 +72,13 @@ h1, h2, h3, h4, h5, h6{
 
 .titulo .decisiones p{
     font-size: 400%;
+}
+
+.narradora-saludo{
+    width: 60%;
+    position: absolute;
+    left: -20%;
+    bottom: -30%;
 }
 
 /* **************************************
@@ -97,6 +101,16 @@ h1, h2, h3, h4, h5, h6{
     animation: escalera 1s;
 }
 
+.escena1-texto{
+    float: right;
+    margin-right: 18%;
+    margin-top: 20%;
+    width: 30%;
+    height: 25%;
+}
+
+.escena1-texto p{font-size: 125%;}
+
 /*.bajando-escalera:hover{
     transform:translateY(300px);
 }*/
@@ -116,6 +130,7 @@ h1, h2, h3, h4, h5, h6{
 ***************************************** */
 .escena2{
     background: url(../img/fondo/cocina1.jpg);
+    z-index: 1;
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100% 100%;
@@ -146,6 +161,16 @@ h1, h2, h3, h4, h5, h6{
     top: 44%;
 }
 
+.escena2-texto{
+    float: left;
+    margin-left: 5%;
+    margin-top: -17%;
+    width: 30%;
+    height: 25%;
+}
+
+.escena2-texto p{font-size: 125%;}
+
 /* **************************************
 *************** SELECCION 1 *****************
 ***************************************** */
@@ -162,15 +187,7 @@ h1, h2, h3, h4, h5, h6{
     font-size: 200px;
 }
 
-/* ESCENA 3.1 */
-
-.seleccion1 article:nth-child(2){
-    background-image: url(../img/fondo/cocina1.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    background-attachment: local;
-}
+/* ESCENA 3 */
 
 .abuela-neutra{
     width: 45%;
@@ -198,6 +215,25 @@ h1, h2, h3, h4, h5, h6{
     position: absolute;
     left: 30%;
     top: 42%;
+}
+
+.escena3-texto{
+    margin-left: 35%;
+    margin-top: -20%;
+    width: 35%;
+    height: 30%;
+}
+
+.escena3-texto p{font-size: 15%;}
+
+/* ESCENA 3.1 */
+
+.seleccion1 article:nth-child(2){
+    background-image: url(../img/fondo/cocina1.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-attachment: local;
 }
 
 /* ESCENA 3.2 */
@@ -240,10 +276,19 @@ h1, h2, h3, h4, h5, h6{
 }
 
 .nena-llora:hover{
-    transition: 2s;
-    transform: translateX(100px);
+    transition: 1s;
+    transform: translateX(150px);
 }
 
+.escena4-texto{
+    float: right;
+    margin-right: 8%;
+    margin-top: 4%;
+    width: 20%;
+    height: 45%;
+}
+
+.escena4-texto p{font-size: 120%;}
 
 /* **************************************
 *************** ESCENA 5 *****************
@@ -288,6 +333,16 @@ h1, h2, h3, h4, h5, h6{
     transition: 1s;
 }
 
+.escena5-texto{
+    float: right;
+    margin-right: 7%;
+    margin-bottom: 35%;
+    width: 60%;
+    height: 20%;
+}
+
+.escena5-texto p{font-size: 125%;}
+
 /* **************************************
 *************** ESCENA 6 *****************
 ***************************************** */
@@ -306,6 +361,16 @@ h1, h2, h3, h4, h5, h6{
     left: 46%;
     top: 25%;
 }
+
+.escena6-texto{
+    float: left;
+    margin-left: 15%;
+    margin-top: 3%;
+    width: 27%;
+    height: 45%;
+}
+
+.escena6-texto p{font-size: 120%;}
 
 /* **************************************
 ************ SELECCION 2 ****************
@@ -329,6 +394,7 @@ h1, h2, h3, h4, h5, h6{
 
 .seleccion2 article:nth-child(2){
     background: url(../img/fondo/libros.jpg);
+    z-index: 1;
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100% 100%;
@@ -346,12 +412,23 @@ h1, h2, h3, h4, h5, h6{
     transition: 1s;
 }
 
+.final1-texto{
+    float: right;
+    margin-right: 17%;
+    margin-top: 4%;
+    width: 40%;
+    height: 45%;
+}
+
+.final1-texto p{font-size: 120%;}
+
 /* **************************************
 ************* FINAL 2 MAMA **************
 ***************************************** */
 
 .seleccion2 article:nth-child(3){
     background: url(../img/fondo/living2.png);
+    z-index: 1;
     background-position: center;
     background-repeat: no-repeat;
     background-size: 90% 100%;
@@ -368,6 +445,16 @@ h1, h2, h3, h4, h5, h6{
     transform: scale(1.2);
     transition: 1s;
 }
+
+.final2-texto{
+    float: left;
+    margin-left: 10%;
+    margin-top: 3%;
+    width: 20%;
+    height: 45%;
+}
+
+.final2-texto p{font-size: 120%;}
 
 /* **************************************
 ************* ESTADISTICAS 1 **************
